SVN
---

XML:   Resolved issue CASTOR-1921 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Improved handling of global/local element collisions with identical type for automatic class 
       conflict resolution.
       Details: http://jira.codehaus.org/browse/CASTOR-1955
       (Werner - 20070426)

XML:   Resolved issue CASTOR-1921 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed incorrect Java version number (as used in Marshaller).
       Details: http://jira.codehaus.org/browse/CASTOR-1921
       (Werner - 20070425)

XML:   Resolved issue CASTOR-1954 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       XML code generator does not create property* methods for enumerations anymore.
       Details: http://jira.codehaus.org/browse/CASTOR-1954
       (Werner - 20070425)


Version 1.1.1, Apr 22, 2007
-------------------------------

XML:   Resolved issue CASTOR-1945 using contribution from Doug Daniels [Daniels.Douglas@gmail.com]
       Fixed problem with 'time' type handling in XML instance to schema generator.
       Details: http://jira.codehaus.org/browse/CASTOR-1945
       (Werner - 20070418)

XML:   Resolved issue CASTOR-1937 using contribution from Paul Croarkin [paul_croarkin@yahoo.com]
       Relaxed various checks in the default ID resolver implementation so that those
       are executed only when the Unmarshaller is configured to be 'validating'.
       Details: http://jira.codehaus.org/browse/CASTOR-1937
       (Werner - 20070416)

XML:   Resolved issue CASTOR-1943 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added Unmarshaller.setObject(Object) to allow setting of a root object for unmarshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1943
       (Werner - 20070412)

XML:   Resolved issue CASTOR-1939 using contribution from Werner Guttmann [werner.guttmann@gmx.net]